domain_conf: Add support for iothreads in disk definition
Add a new disk "driver" attribute "iothread" to be parsed as the thread
number for the disk to use. In order to more easily facilitate the usage
and configuration of the iothread, a "zero" for the attribute indicates
iothreads are not supported for the device and a positive value indicates
the specific thread to try and use.

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -2160,6 +2160,14 @@
             (ignore the discard request).
             <span class='since'>Since 1.0.6 (QEMU and KVM only)</span>
           </li>
+          <li>
+            The optional <code>iothread</code> attribute assigns the
+            disk to an IOThread as defined by the range for the domain
+            <a href="#elementsIOThreadsAllocation"><code>iothreads</code></a>
+            value. Multiple devices may be assigned to the same IOThread and
+            are numbered from 1 to the domain iothreads value.
+            <span class='since'>Since 1.2.8 (QEMU only)</span>
+          </li>
         </ul>
       </dd>
       <dt><code>boot</code></dt>
