blockcopy: allow larger buf-size
While qemu definitely caps granularity to 64 MiB, it places no
limits on buf-size.  On a machine beefy enough for lots of
memory, a buf-size larger than 2 GiB is feasible, so we should
pass a 64-bit parameter.

* include/libvirt/libvirt.h.in (VIR_DOMAIN_BLOCK_COPY_BUF_SIZE):
Allow 64 bits.

Signed-off-by: Eric Blake <eblake@redhat.com>
Signed-off-by: Jiri Denemark <jdenemar@redhat.com>

--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -2678,8 +2678,8 @@ typedef enum {
  * VIR_DOMAIN_BLOCK_COPY_BUF_SIZE:
  * Macro for the virDomainBlockCopy buffer size tunable: it represents
  * how much data in bytes can be in flight between source and destination,
- * as an unsigned int. Specifying 0 is the same as omitting this parameter,
- * to request the hypervisor default.
+ * as an unsigned long long. Specifying 0 is the same as omitting this
+ * parameter, to request the hypervisor default.
  */
 #define VIR_DOMAIN_BLOCK_COPY_BUF_SIZE "buf-size"
 
