--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -3874,7 +3874,11 @@ qemu-kvm -net nic,model=? /dev/null
       &lt;source network='default'/&gt;
       &lt;target dev='vnet1'/&gt;
       &lt;model type='virtio'/&gt;
-      <b>&lt;driver name='vhost' txmode='iothread' ioeventfd='on' event_idx='off' queues='5'/&gt;</b>
+      <b>&lt;driver name='vhost' txmode='iothread' ioeventfd='on' event_idx='off' queues='5'&gt;
+        &lt;host csum='off' gso='off' tso4='off' tso6='off' ecn='off' ufo='off'/&gt;
+        &lt;guest csum='off' tso4='off' tso6='off' ecn='off' ufo='off'/&gt;
+      &lt;/driver&gt;
+      </b>
     &lt;/interface&gt;
   &lt;/devices&gt;
   ...</pre>
@@ -3977,6 +3981,24 @@ qemu-kvm -net nic,model=? /dev/null
         created; each queue will potentially be handled by a different
         processor, resulting in much higher throughput.
         <span class="since">Since 1.0.6 (QEMU and KVM only)</span>
+      </dd>
+      <dt><code>host</code> offloading options</dt>
+      <dd>
+        The <code>csum</code>, <code>gso</code>, <code>tso4</code>,
+        <code>tso6</code>, <code>ecn</code> and <code>ufo</code>
+        attributes with possible values <code>on</code>
+        and <code>off</code> can be used to turn off host offloading options.
+        By default, the supported offloads are enabled by QEMU.
+        <span class="since">Since 1.2.9 (QEMU only)</span>
+      </dd>
+      <dt><code>guest</code> offloading options</dt>
+      <dd>
+        The <code>csum</code>, <code>tso4</code>,
+        <code>tso6</code>, <code>ecn</code> and <code>ufo</code>
+        attributes with possible values <code>on</code>
+        and <code>off</code> can be used to turn off guest offloading options.
+        By default, the supported offloads are enabled by QEMU.
+        <span class="since">Since 1.2.9 (QEMU only)</span>
       </dd>
     </dl>
 
