--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -3969,6 +3969,26 @@ qemu-kvm -net nic,model=? /dev/null
       </dd>
     </dl>
 
+    <h5><a name="elementsBackendOptions">Setting network backend-specific options</a></h5>
+
+<pre>
+  ...
+  &lt;devices&gt;
+    &lt;interface type='network'&gt;
+      &lt;source network='default'/&gt;
+      &lt;target dev='vnet1'/&gt;
+      &lt;model type='virtio'/&gt;
+      <b>&lt;backend tap='/dev/net/tun' vhost='/dev/net-vhost'/&gt;</b>
+      &lt;driver name='vhost' txmode='iothread' ioeventfd='on' event_idx='off' queues='5'/&gt;
+    &lt;/interface&gt;
+  &lt;/devices&gt;
+  ...</pre>
+
+    <p>
+      For tuning the backend of the network, the <code>backend</code> element
+      can be used. Supported attributes are <code>tap</code> and <code>vhost</code>,
+      allowing to override the default devices for creating tap and vhost devices.
+    </p>
     <h5><a name="elementsNICSTargetOverride">Overriding the target element</a></h5>
 
 <pre>
